--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --font-inter: "Inter", sans-serif;
   --font-playfair: "Playfair Display", serif;
   --color-primary:  #3087C9; 
-  --color-secondary: #333333; 
+  --color-secondary: #000000; /*#333333*/
   --color-light: #F2F9FF;
   --color-accent: #57595B;
   --color-border-color: #d4d6d9;
